<resources>
    <string name="app_name">BikeShopMobile</string>
    <string name="article">ARTICLES</string>
    <string name="categorie">CATEGORIES</string>
    <string name="client">CLIENTS</string>
    <string name="commande">COMMANDES</string>
    <string name="employe">EMPLOYES</string>
    <string name="magasin">MAGASINS</string>
    <string name="marque">MARQUES</string>
    <string name="produit">PRODUITS</string>
    <string name="stock">STOCKS</string>
    <string name="notif">NOTIFICATIONS</string>
    <string name="notif_text">Les stocks suivants sont faibles</string>
    <string name="list_article">Liste des articles</string>
    <string name="list_categorie">Liste des categories</string>
    <string name="list_client">Liste des clients</string>
    <string name="list_commande">Liste des commandes</string>
    <string name="list_employe">Liste des employes</string>
    <string name="list_magasin">Liste des magasins</string>
    <string name="list_marque">Liste des marques</string>
    <string name="list_produit">Liste des produits</string>
    <string name="list_stock">Liste des stocks</string>
    <string name="add">Ajouter</string>
    <string name="modify">Modifier</string>
    <string name="detail_article">Details article</string>
    <string name="detail_categorie">Details categorie</string>
    <string name="detail_client">Details clients</string>
    <string name="detail_commande">Details commande</string>
    <string name="detail_employe">Details employe</string>
    <string name="detail_magasin">Details magasin</string>
    <string name="detail_marque">Details marque</string>
    <string name="detail_produit">Details produits</string>
    <string name="detail_stock">Details stocks</string>
    <string name="add_article">Ajout article</string>
    <string name="add_categorie">Ajout categorie</string>
    <string name="add_client">Ajout client</string>
    <string name="add_commande">Ajout commande</string>
    <string name="add_employe">Ajout employe</string>
    <string name="add_magasin">Ajout magasin</string>
    <string name="add_marque">Ajout marque</string>
    <string name="add_produit">Ajout produit</string>
    <string name="add_stock">Ajout stock</string>
    <string name="choose_produit">Choisir un produit</string>
</resources>