<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@color/bg_dark_subtle"
    android:gravity="center"
    tools:context=".activities.article.DetailsArticles">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="80dp"
        android:background="@color/bg_dark_subtle"
        android:padding="10dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/backButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/titleListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_article"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/articleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@id/titleListView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/articleView"
        android:layout_above="@id/modifyButton"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <Spinner
                android:id="@+id/produitSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:spinnerMode="dropdown"
                android:dropDownWidth="match_parent"
                android:dropDownVerticalOffset="40dp"
                android:dropDownHorizontalOffset="0dp"
                android:popupBackground="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/remiseEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Remise"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="numberDecimal"
                android:layout_marginRight="5dp"
                android:background="@drawable/input_bg"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/quantiteEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Quantite"
                android:textColorHint="@color/black"
                android:inputType="number"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/input_bg"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/prixDepartEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="PrixDepart"
                android:textColorHint="@color/black"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:background="@drawable/input_bg"
                android:padding="10dp"/>
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/modifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@color/light_green"
        android:text="@string/modify"
        android:textColor="#333" />

</RelativeLayout>
